Fix scrollbar margin issue on smaller devices

--- a/campaign-carousel/campaign-carousel.css
+++ b/campaign-carousel/campaign-carousel.css
@@ -4,9 +4,10 @@
   grid-template-columns: repeat(9, calc(calc(100% - 30px) / 1.08));
   grid-template-rows: 1fr;
   overflow-x: scroll;
+  padding: 0 20px;
   scrollbar-color: #111111 #dfdfdf;
   scrollbar-width: thin;
-  width: 110%;
+  width: 100%;
 }
 
 .carousel::-webkit-scrollbar {
@@ -19,6 +20,7 @@
 
 .carousel::-webkit-scrollbar-track {
   background: #dfdfdf;
+  margin: 0 20px;
 }
 
 .carousel__scroll-btn {
@@ -163,6 +165,7 @@
   .carousel {
     grid-column-gap: 10px;
     grid-template-columns: repeat(9, calc(calc(100% - 30px) / 2.15));
+    padding: 0 30px;
   }
 
   .item__headline {
@@ -174,6 +177,11 @@
   .carousel {
     grid-column-gap: 20px;
     grid-template-columns: repeat(9, calc(calc(100% - 60px) / 3));
+    padding: 0;
     width: 100%;
+  }
+
+  .carousel::-webkit-scrollbar-track {
+    margin: 0;
   }
 }
