--- a/page.css
+++ b/page.css
@@ -17,12 +17,17 @@ html {
 
 .main {
   overflow-x: hidden;
-  padding: 40px 20px;
+  padding: 40px 0;
 }
 
 .section {
   margin-bottom: 100px;
+  padding: 0 20px;
   position: relative;
+}
+
+.section--carousel {
+  padding: 0;
 }
 
 @media screen and (min-width: 600px) {
@@ -31,7 +36,15 @@ html {
   }
 
   .main {
-    padding: 60px 30px;
+    padding: 60px 0;
+  }
+
+  .section {
+    padding: 0 30px;
+  }
+
+  .section--carousel {
+    padding: 0;
   }
 }
 
@@ -41,7 +54,11 @@ html {
   }
 
   .main {
-    padding: 60px 50px;
+    padding: 60px 0;
+  }
+
+  .section {
+    padding: 0 50px;
   }
 }
 
@@ -52,5 +69,9 @@ html {
 
   .main {
     padding: 60px 40px 60px 10%;
+  }
+
+  .section {
+    padding: 0;
   }
 }
